# core

./: .env.example  .gitignore  Dockerfile  compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build_and_push_image.yml
core/: settings.py  urls.py
customers/: admin.py  apps.py  decorators.py  forms.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_customer_ssh_key.py  0003_rename_ssh_key_customer_ssh_public_key.py  0004_watchman.py  0005_customer_system_user_name.py  0006_remove_customer_ssh_public_key_sshkey.py  0007_alter_sshkey_owner_bot_delete_watchman.py  0008_findingroute_bot_unique_owner_bot_name_and_more.py  0009_remove_findingroute_unique_customer_bot_alert.py  0010_bot_env_vars_customer_env_vars_and_more.py
customers/system/: git.py  ssh.py  utils.py
customers/templates/: index.html
customers/templates/account/: logout.html
customers/templates/customers/: bot.html  bots.html  customer_info.html  index.html  keys.html  profile.html  route_edit.html  routes.html
customers/templates/partials/: footer.html  header.html  layout.html  sidebar.html
customers/templates/socialaccount/: login.html
customers/templatetags/: custom_filters.py
customers/tests/: test_decorators.py
customers/views/: bots.py  profile.py  routes.py  ssh_keys.py  views.py
shared/: models.py
shell_scripts/: deploy_bot.sh
shell_scripts/git/hooks/: pre-receive
srv/: deploy_bot.sh
srv/git/hooks/: pre-receive
